--- a/style.css
+++ b/style.css
@@ -4,15 +4,72 @@ body {
     display:block;
 }
 
-#container {
-    display:grid;
-    gap: 10px 10px;
+#maincontainer {
+    width: 896px;
+    height: 958px;
+    margin: auto;
+    display: grid;
+    grid-template-areas: 
+    'top top top top top'
+    'bottom bottom bottom bottom bottom';
+    row-gap: 48px;
 }
 
-#container > div {
-    border:solid black 2px;
+#main_top {
+    grid-area: top;
 }
 
+#main_bottom {
+    grid-area: bottom;
+}
+
+#inner_bottom {
+    display: grid;
+    grid-template-areas: 
+    'left left  right right right'
+    'left left right right right'
+    'left left right right right';
+    column-gap: 35px;
+}
+
+#inner_left {
+    grid-area: left;
+}
+
+#inner_right {
+    grid-area: right;
+}
+
+.subcontainer > div {
+    border:solid black 1px;
+}
+
+#top {
+    display: grid;
+    grid-template-areas: 
+    'name one';
+    column-gap: 50px;
+}
+
+#left {
+    display: grid;
+    grid-template-areas: 
+    'two three'
+    'six six'
+    'eight nine';
+    column-gap: 35px;
+    row-gap: 48px;
+}
+
+#right {
+    display: grid;
+    grid-template-areas: 
+    'four four five'   
+    'four four seven'
+    'ten ten ten';
+    column-gap: 35px;
+    row-gap: 48px;
+}
 
 .mediumbox {
     width: 420px;
@@ -20,6 +77,7 @@ body {
 }
 
 #box0 {
+    grid-area: name;
     align-content: center;
 }
 
@@ -34,6 +92,7 @@ p {
 }
 
 #box1 {
+    grid-area: one;
     background-image: url(./assets/item1.png);
     background-size: cover;
     background-position: center;
@@ -45,42 +104,49 @@ p {
 }
 
 #box2 {
+    grid-area: two;
     background-image: url(./assets/item2.png);
     background-size: cover;
     background-position: center;
 }
 
 #box3 {
+    grid-area: three;
     background-image: url(./assets/item3.png);
     background-size: cover;
     background-position: center;
 }
 
 #box5 {
+    grid-area: five;
     background-image: url(./assets/item5.png);
     background-size: cover;
     background-position: center;
 }
 
 #box7 {
+    grid-area: seven;
     background-image: url(./assets/item7.png);
     background-size: cover;
     background-position: center;
 }
 
 #box8 {
+    grid-area: eight;
     background-image: url(./assets/item8.png);
     background-size: cover;
     background-position: center;
 }
 
 #box9 {
+    grid-area: nine;
     background-image: url(./assets/item9.png);
     background-size: cover;
     background-position: center;
 }
 
 #box4{
+    grid-area: four;
     width: 335px;
     height: 448px;
     background-image: url(./assets/item4.png);
@@ -89,6 +155,7 @@ p {
 }
 
 #box6 {
+    grid-area: six;
     width: 335px;
     height: 200px;
     background-image: url(./assets/item6.png);
@@ -97,6 +164,7 @@ p {
 }
 
 #box10 {
+    grid-area: ten;
     width: 520px;
     height: 200px;
     background-image: url(./assets/item10.png);
